force-app/main/default/objects/Comment__c/fields/Authors_name__c.field-meta.xml
<CustomField>
    <fullName>Authors_name__c</fullName>
    <label>Authors name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>