force-app/main/default/objects/Comment__c/fields/CommentId__c.field-meta.xml
<CustomField>
    <fullName>CommentId__c</fullName>
    <externalId>true</externalId>
    <label>CommentId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>