force-app/main/default/objects/Comment__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post</label>
    <referenceTo>Post__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>