force-app/main/default/objects/Comment__c/fields/Post_Id__c.field-meta.xml
<CustomField>
    <fullName>Post_Id__c</fullName>
    <label>Post Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>